error message contrast issue #1778 https://github.com/proudcity/wp-proudcity/issues/1778

--- a/app/pattern-scss/_forms.scss
+++ b/app/pattern-scss/_forms.scss
@@ -20,6 +20,10 @@ label {
   color: $text-color;
 }
 
+.gform_wrapper .gfield_error input, .gform_wrapper .gfield_error select, .gform_wrapper .gfield_error textarea {
+  color: #a94442;
+}
+
 .form-group {
   position: relative;
 
